# nodejs-samples

basic/: root.ts
basic/flows/: tsconfig.json
basic/flows/binary/: .flow.ui.oo.json  flow.oo.yaml
basic/flows/esm/: .flow.ui.oo.json  flow.oo.yaml
basic/flows/finish/: .flow.ui.oo.json  flow.oo.yaml
basic/flows/import-root/: .flow.ui.oo.json  flow.oo.yaml
basic/flows/output/: .flow.ui.oo.json  flow.oo.yaml
basic/flows/pkg-api/: .flow.ui.oo.json  flow.oo.yaml
basic/flows/preview/: .flow.ui.oo.json  flow.oo.yaml
basic/flows/progress/: .flow.ui.oo.json  flow.oo.yaml
basic/flows/secret/: .flow.ui.oo.json  flow.oo.yaml
basic/flows/session-dir/: .flow.ui.oo.json  flow.oo.yaml
basic/tests/: package-lock.json  package.json
subflow/: README.md  pyproject.toml
subflow/flows/iterator-with-slot/: .flow.ui.oo.json  flow.oo.yaml
subflow/flows/iterator-with-slot/scriptlets/: +scriptlet#4.ts
subflow/flows/sub/: .flow.ui.oo.json  flow.oo.yaml
subflow/flows/sub/scriptlets/: +scriptlet#1.js
subflow/slotflows/+slotflow#1/: .slotflow.ui.oo.json  slotflow.oo.yaml
subflow/slotflows/+slotflow#1/scriptlets/: +scriptlet#1.ts
subflow/subflows/basic/: .subflow.ui.oo.json  subflow.oo.yaml
subflow/subflows/basic/scriptlets/: +scriptlet#1.ts
subflow/subflows/iterate-with-slot/: .subflow.ui.oo.json  subflow.oo.yaml
subflow/subflows/iterate-with-slot/scriptlets/: +scriptlet#1.js  +scriptlet#7.ts  +scriptlet#8.ts
subflow/subflows/sub-with-slot/: .subflow.ui.oo.json  subflow.oo.yaml
subflow/subflows/sub-with-slot/scriptlets/: +javascript#1.js
(+76 files in other folders)
