[project]
name = "subflow-slotflow"
version = "0.1.0"
description = ""
authors = [
    {name = "leavesster",email = "11785335+leavesster@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "typing-extensions (>=4.14.0,<5.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "subflow_slotflow", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
